--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,16 +13,19 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: misskey/misskey
+          images: romneco/yoiyami
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
       - name: Build and Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
